--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: Eleventy Build
+name: Eleventy publish
 on: [push]
 
 jobs:
-  build_deploy:
-    runs-on: ubuntu-18.04
+  publish:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Build
