--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,4 @@ jobs:
       - uses: actions/upload-pages-artifact@v1
         with:
           path: _site
-      - name: Deploy
-        id: deployment
-        uses: actions/deploy-pages@v1
+      - uses: actions/deploy-pages@v1
