--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Build
         uses: TartanLlama/actions-eleventy@master
       - name: Deploy
-      - uses: actions/configure-pages@v2
-      - uses: actions/upload-pages-artifact@v1
+        uses: actions/configure-pages@v2
+        uses: actions/upload-pages-artifact@v1
         with:
           path: _site
-      - uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v1
