--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Build
-        uses: TartanLlama/actions-eleventy@master
-      - name: Deploy
-        uses: actions/configure-pages@v2
-        uses: actions/upload-pages-artifact@v1
+      - uses: TartanLlama/actions-eleventy@master
+      - uses: actions/configure-pages@v2
+      - uses: actions/upload-pages-artifact@v1
         with:
           path: _site
+      - name: Deploy
+        id: deployment
         uses: actions/deploy-pages@v1
+
